[project]
name = "zorvyn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pyjwt>=2.12.1",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]
